// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardPage Dashboard init completed  Should render dashboard grid 1`] = `
<div>
  <div
    class="css-1mwktlb"
  >
    <div
      aria-label="Dashboard navigation"
    >
      <div
        class="page-toolbar css-1hik5m6"
      >
        <div
          class="css-14mr6ll"
        >
          <div
            aria-hidden="true"
            class="css-1vzus6i-Icon"
          />
        </div>
        <a
          class="css-dlnelv"
          href="/?search=open"
        >
          My dashboard - Grafana
        </a>
        <div
          class="css-umstnt"
        >
          <div
            class="css-rwrh9q"
          >
            <button
              class="css-1av2c2g"
            >
              <div
                class="css-1vzus6i-Icon"
              />
            </button>
          </div>
        </div>
        <div
          class="css-umstnt"
        >
          <div
            class="css-rwrh9q"
          >
            <button
              class="css-1av2c2g"
            >
              <div
                class="css-1vzus6i-Icon"
              />
            </button>
          </div>
        </div>
        <div
          class="css-1hos3qg"
        />
        <div
          class="css-p8muss"
        >
          <button
            aria-label="Page toolbar button Add panel"
            class="toolbar-button css-1bbmb0s-toolbar-button"
          >
            <div
              class="css-1vzus6i-Icon"
            />
          </button>
        </div>
        <div
          class="css-p8muss"
        >
          <button
            aria-label="Page toolbar button Save dashboard"
            class="toolbar-button css-1bbmb0s-toolbar-button"
          >
            <div
              class="css-1vzus6i-Icon"
            />
          </button>
        </div>
        <div
          class="css-p8muss"
        >
          <button
            aria-label="Page toolbar button Dashboard settings"
            class="toolbar-button css-1bbmb0s-toolbar-button"
          >
            <div
              class="css-1vzus6i-Icon"
            />
          </button>
        </div>
        <div
          class="css-p8muss"
        >
          <div
            class="css-o99k6q"
          >
            <div
              class="button-group css-1kl6l1j"
            >
              <button
                aria-label="TimePicker Open Button"
                class="toolbar-button css-1bbmb0s-toolbar-button"
              >
                <div
                  class="css-1vzus6i-Icon"
                />
                <div
                  class="css-1i2o8lj"
                >
                  <span
                    class="css-15dl6a3"
                  >
                    <span>
                      Last 6 hours
                    </span>
                    <span
                      class="css-1n2bi9n"
                    />
                  </span>
                </div>
                <div
                  class="css-1vzus6i-Icon"
                />
              </button>
              <button
                class="toolbar-button css-1bbmb0s-toolbar-button"
              >
                <div
                  class="css-1vzus6i-Icon"
                />
              </button>
            </div>
            <div
              class="button-group css-1c76w5q refresh-picker"
            >
              <button
                aria-label="RefreshPicker run button"
                class="toolbar-button css-1bbmb0s-toolbar-button"
              >
                <div
                  class="css-1vzus6i-Icon"
                />
              </button>
              <div
                class="button-group css-1viikh2"
              >
                <button
                  aria-label="RefreshPicker interval button"
                  class="toolbar-button css-1bbmb0s-toolbar-button"
                >
                  
                  <div
                    class="css-1vzus6i-Icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-p8muss"
        >
          <button
            aria-label="Page toolbar button Cycle view mode"
            class="toolbar-button css-1bbmb0s-toolbar-button"
          >
            <div
              class="css-1vzus6i-Icon"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="css-17x4n39"
    >
      <div
        class="css-12b7m5k"
        style="position: relative; overflow: hidden; width: 100%; height: auto; min-height: 100%; max-height: 100%;"
      >
        <div
          class="scrollbar-view"
          style="position: relative; overflow: scroll; margin-right: 0px; margin-bottom: 0px; min-height: calc(100% + 0px); max-height: calc(100% + 0px);"
        >
          <div
            class="css-1xodasp"
          >
            <div
              aria-label="Dashboard submenu"
            />
            <div
              style="overflow: visible; width: 100%; height: 100%;"
            >
              <div
                class="react-grid-layout"
                style="height: 30px;"
              >
                <div
                  class="react-grid-item react-resizable"
                  data-panelid="1"
                  style="top: 0px; left: 0px; width: 100%; height: 30px; position: absolute;"
                >
                  <div
                    aria-label="Panel container title My graph"
                    class="panel-container panel-container--absolute"
                  >
                    <div
                      class="panel-header grid-drag-handle"
                    >
                      <div
                        aria-label="Panel header title item My graph"
                        class="panel-title-container"
                      >
                        <div
                          class="panel-title"
                        >
                          <span
                            class="panel-title-text"
                          >
                            My graph
                          </span>
                          <div
                            class="css-1vzus6i-Icon"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    class="react-resizable-handle react-resizable-handle-se"
                  />
                </div>
              </div>
            </div>
            <div
              class="resize-triggers"
            >
              <div
                class="expand-trigger"
              >
                <div
                  style="width: 1px; height: 1px;"
                />
              </div>
              <div
                class="contract-trigger"
              />
            </div>
          </div>
        </div>
        <div
          class="track-horizontal"
          style="position: absolute; height: 6px; display: none;"
        >
          <div
            class="thumb-horizontal"
            style="position: relative; display: block; height: 100%;"
          />
        </div>
        <div
          class="track-vertical"
          style="position: absolute; width: 6px; display: none;"
        >
          <div
            class="thumb-vertical"
            style="position: relative; display: block; width: 100%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DashboardPage Dashboard is fetching slowly Should render slow init state 1`] = `
<div>
  <div
    class="css-1mwktlb"
  >
    <div
      aria-label="Dashboard navigation"
    >
      <div
        class="page-toolbar css-1hik5m6"
      >
        <div
          class="css-14mr6ll"
        >
          <div
            aria-hidden="true"
            class="css-1vzus6i-Icon"
          />
        </div>
        <a
          class="css-dlnelv"
          href="/?search=open"
        >
          My dashboard
        </a>
        <div
          class="css-umstnt"
        >
          <div
            class="css-rwrh9q"
          >
            <button
              class="css-1av2c2g"
            >
              <div
                class="css-1vzus6i-Icon"
              />
            </button>
          </div>
        </div>
        <div
          class="css-umstnt"
        >
          <div
            class="css-rwrh9q"
          >
            <button
              class="css-1av2c2g"
            >
              <div
                class="css-1vzus6i-Icon"
              />
            </button>
          </div>
        </div>
        <div
          class="css-1hos3qg"
        />
        <div
          class="css-p8muss"
        >
          <button
            aria-label="Page toolbar button Add panel"
            class="toolbar-button css-1bbmb0s-toolbar-button"
          >
            <div
              class="css-1vzus6i-Icon"
            />
          </button>
        </div>
        <div
          class="css-p8muss"
        >
          <button
            aria-label="Page toolbar button Save dashboard"
            class="toolbar-button css-1bbmb0s-toolbar-button"
          >
            <div
              class="css-1vzus6i-Icon"
            />
          </button>
        </div>
        <div
          class="css-p8muss"
        >
          <button
            aria-label="Page toolbar button Dashboard settings"
            class="toolbar-button css-1bbmb0s-toolbar-button"
          >
            <div
              class="css-1vzus6i-Icon"
            />
          </button>
        </div>
        <div
          class="css-p8muss"
        >
          <div
            class="css-o99k6q"
          >
            <div
              class="button-group css-1kl6l1j"
            >
              <button
                aria-label="TimePicker Open Button"
                class="toolbar-button css-1bbmb0s-toolbar-button"
              >
                <div
                  class="css-1vzus6i-Icon"
                />
                <div
                  class="css-1i2o8lj"
                >
                  <span
                    class="css-15dl6a3"
                  >
                    <span>
                      Last 6 hours
                    </span>
                    <span
                      class="css-1n2bi9n"
                    />
                  </span>
                </div>
                <div
                  class="css-1vzus6i-Icon"
                />
              </button>
              <button
                class="toolbar-button css-1bbmb0s-toolbar-button"
              >
                <div
                  class="css-1vzus6i-Icon"
                />
              </button>
            </div>
            <div
              class="button-group css-1c76w5q refresh-picker"
            >
              <button
                aria-label="RefreshPicker run button"
                class="toolbar-button css-1bbmb0s-toolbar-button"
              >
                <div
                  class="css-1vzus6i-Icon"
                />
              </button>
              <div
                class="button-group css-1viikh2"
              >
                <button
                  aria-label="RefreshPicker interval button"
                  class="toolbar-button css-1bbmb0s-toolbar-button"
                >
                  
                  <div
                    class="css-1vzus6i-Icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-p8muss"
        >
          <button
            aria-label="Page toolbar button Cycle view mode"
            class="toolbar-button css-1bbmb0s-toolbar-button"
          >
            <div
              class="css-1vzus6i-Icon"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="css-17x4n39"
    >
      <div
        class="css-12b7m5k"
        style="position: relative; overflow: hidden; width: 100%; height: auto; min-height: 100%; max-height: 100%;"
      >
        <div
          class="scrollbar-view"
          style="position: relative; overflow: scroll; margin-right: 0px; margin-bottom: 0px; min-height: calc(100% + 0px); max-height: calc(100% + 0px);"
        >
          <div
            class="css-1xodasp"
          >
            <div
              aria-label="Dashboard submenu"
            />
            <div
              style="overflow: visible; width: 100%; height: 100%;"
            >
              <div
                class="react-grid-layout"
                style="height: 30px;"
              >
                <div
                  class="react-grid-item react-resizable"
                  data-panelid="1"
                  style="top: 0px; left: 0px; width: 100%; height: 30px; position: absolute;"
                >
                  <div
                    aria-label="Panel container title My graph"
                    class="panel-container panel-container--absolute"
                  >
                    <div
                      class="panel-header grid-drag-handle"
                    >
                      <div
                        aria-label="Panel header title item My graph"
                        class="panel-title-container"
                      >
                        <div
                          class="panel-title"
                        >
                          <span
                            class="panel-title-text"
                          >
                            My graph
                          </span>
                          <div
                            class="css-1vzus6i-Icon"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    class="react-resizable-handle react-resizable-handle-se"
                  />
                </div>
              </div>
            </div>
            <div
              class="resize-triggers"
            >
              <div
                class="expand-trigger"
              >
                <div
                  style="width: 1px; height: 1px;"
                />
              </div>
              <div
                class="contract-trigger"
              />
            </div>
          </div>
        </div>
        <div
          class="track-horizontal"
          style="position: absolute; height: 6px; display: none;"
        >
          <div
            class="thumb-horizontal"
            style="position: relative; display: block; height: 100%;"
          />
        </div>
        <div
          class="track-vertical"
          style="position: absolute; width: 6px; display: none;"
        >
          <div
            class="thumb-vertical"
            style="position: relative; display: block; width: 100%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DashboardPage Given initial state Should render nothing 1`] = `<div />`;

exports[`DashboardPage When dashboard has editview url state should render settings view 1`] = `
<div>
  <div
    class="css-1mwktlb"
  >
    <div
      aria-label="Dashboard navigation"
    >
      <div
        class="page-toolbar css-1hik5m6"
      >
        <div
          class="css-14mr6ll"
        >
          <div
            aria-hidden="true"
            class="css-1vzus6i-Icon"
          />
        </div>
        <a
          class="css-dlnelv"
          href="/?search=open"
        >
          My dashboard
        </a>
        <div
          class="css-umstnt"
        >
          <div
            class="css-rwrh9q"
          >
            <button
              class="css-1av2c2g"
            >
              <div
                class="css-1vzus6i-Icon"
              />
            </button>
          </div>
        </div>
        <div
          class="css-umstnt"
        >
          <div
            class="css-rwrh9q"
          >
            <button
              class="css-1av2c2g"
            >
              <div
                class="css-1vzus6i-Icon"
              />
            </button>
          </div>
        </div>
        <div
          class="css-1hos3qg"
        />
        <div
          class="css-p8muss"
        >
          <button
            aria-label="Page toolbar button Add panel"
            class="toolbar-button css-1bbmb0s-toolbar-button"
          >
            <div
              class="css-1vzus6i-Icon"
            />
          </button>
        </div>
        <div
          class="css-p8muss"
        >
          <button
            aria-label="Page toolbar button Save dashboard"
            class="toolbar-button css-1bbmb0s-toolbar-button"
          >
            <div
              class="css-1vzus6i-Icon"
            />
          </button>
        </div>
        <div
          class="css-p8muss"
        >
          <button
            aria-label="Page toolbar button Dashboard settings"
            class="toolbar-button css-1bbmb0s-toolbar-button"
          >
            <div
              class="css-1vzus6i-Icon"
            />
          </button>
        </div>
        <div
          class="css-p8muss"
        >
          <div
            class="css-o99k6q"
          >
            <div
              class="button-group css-1kl6l1j"
            >
              <button
                aria-label="TimePicker Open Button"
                class="toolbar-button css-1bbmb0s-toolbar-button"
              >
                <div
                  class="css-1vzus6i-Icon"
                />
                <div
                  class="css-1i2o8lj"
                >
                  <span
                    class="css-15dl6a3"
                  >
                    <span>
                      Last 6 hours
                    </span>
                    <span
                      class="css-1n2bi9n"
                    />
                  </span>
                </div>
                <div
                  class="css-1vzus6i-Icon"
                />
              </button>
              <button
                class="toolbar-button css-1bbmb0s-toolbar-button"
              >
                <div
                  class="css-1vzus6i-Icon"
                />
              </button>
            </div>
            <div
              class="button-group css-1c76w5q refresh-picker"
            >
              <button
                aria-label="RefreshPicker run button"
                class="toolbar-button css-1bbmb0s-toolbar-button"
              >
                <div
                  class="css-1vzus6i-Icon"
                />
              </button>
              <div
                class="button-group css-1viikh2"
              >
                <button
                  aria-label="RefreshPicker interval button"
                  class="toolbar-button css-1bbmb0s-toolbar-button"
                >
                  
                  <div
                    class="css-1vzus6i-Icon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-p8muss"
        >
          <button
            aria-label="Page toolbar button Cycle view mode"
            class="toolbar-button css-1bbmb0s-toolbar-button"
          >
            <div
              class="css-1vzus6i-Icon"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="css-17x4n39"
    >
      <div
        class="css-12b7m5k"
        style="position: relative; overflow: hidden; width: 100%; height: auto; min-height: 100%; max-height: 100%;"
      >
        <div
          class="scrollbar-view"
          style="position: relative; overflow: scroll; margin-right: 0px; margin-bottom: 0px; min-height: calc(100% + 0px); max-height: calc(100% + 0px);"
        >
          <div
            class="css-1xodasp"
          >
            <div
              aria-label="Dashboard submenu"
            />
            <div
              style="overflow: visible; width: 100%; height: 100%;"
            >
              <div
                class="react-grid-layout"
                style="height: 30px;"
              >
                <div
                  class="react-grid-item react-resizable"
                  data-panelid="1"
                  style="top: 0px; left: 0px; width: 100%; height: 30px; position: absolute;"
                >
                  <div
                    aria-label="Panel container title My graph"
                    class="panel-container panel-container--absolute"
                  >
                    <div
                      class="panel-header grid-drag-handle"
                    >
                      <div
                        aria-label="Panel header title item My graph"
                        class="panel-title-container"
                      >
                        <div
                          class="panel-title"
                        >
                          <span
                            class="panel-title-text"
                          >
                            My graph
                          </span>
                          <div
                            class="css-1vzus6i-Icon"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    class="react-resizable-handle react-resizable-handle-se"
                  />
                </div>
              </div>
            </div>
            <div
              class="resize-triggers"
            >
              <div
                class="expand-trigger"
              >
                <div
                  style="width: 1px; height: 1px;"
                />
              </div>
              <div
                class="contract-trigger"
              />
            </div>
          </div>
        </div>
        <div
          class="track-horizontal"
          style="position: absolute; height: 6px; display: none;"
        >
          <div
            class="thumb-horizontal"
            style="position: relative; display: block; height: 100%;"
          />
        </div>
        <div
          class="track-vertical"
          style="position: absolute; width: 6px; display: none;"
        >
          <div
            class="thumb-vertical"
            style="position: relative; display: block; width: 100%;"
          />
        </div>
      </div>
    </div>
    <div
      class="dashboard-settings"
    >
      <div
        class="page-toolbar css-1hik5m6"
      >
        <div
          class="css-14mr6ll"
        >
          <button
            aria-label="Go Back button"
            class="css-wfwqq8"
            surface="dashboard"
          >
            <div
              class="css-1vzus6i-Icon"
            />
          </button>
        </div>
        <div
          class="css-rkdzmz"
        >
          My dashboard / Settings
        </div>
        <div
          class="css-1hos3qg"
        />
      </div>
      <div
        class="css-12b7m5k"
        style="position: relative; overflow: hidden; width: 100%; height: auto; min-height: 0; max-height: 100%;"
      >
        <div
          class="scrollbar-view"
          style="position: relative; overflow: scroll; margin-right: 0px; margin-bottom: 0px; min-height: calc(0 + 0px); max-height: calc(100% + 0px);"
        >
          <div
            class="css-18ljh8p"
          >
            <div
              class="css-17b70ns"
            >
              <aside
                class="dashboard-settings__aside"
              >
                <a
                  aria-label="Dashboard settings section item General"
                  class="dashboard-settings__nav-item active"
                >
                  <div
                    class="css-1vzus6i-Icon"
                  />
                  General
                </a>
                <a
                  aria-label="Dashboard settings section item Annotations"
                  class="dashboard-settings__nav-item"
                >
                  <div
                    class="css-1vzus6i-Icon"
                  />
                  Annotations
                </a>
                <a
                  aria-label="Dashboard settings section item Variables"
                  class="dashboard-settings__nav-item"
                >
                  <div
                    class="css-1vzus6i-Icon"
                  />
                  Variables
                </a>
                <a
                  aria-label="Dashboard settings section item Links"
                  class="dashboard-settings__nav-item"
                >
                  <div
                    class="css-1vzus6i-Icon"
                  />
                  Links
                </a>
                <a
                  aria-label="Dashboard settings section item JSON Model"
                  class="dashboard-settings__nav-item"
                >
                  <div
                    class="css-1vzus6i-Icon"
                  />
                  JSON Model
                </a>
                <div
                  class="dashboard-settings__aside-actions"
                >
                  <button
                    aria-label="Dashboard settings aside actions Save button"
                    class="css-5tn967-button"
                  >
                    <span
                      class="css-1mhnkuh"
                    >
                      Save dashboard
                    </span>
                  </button>
                </div>
              </aside>
              <div
                class="css-1hq4llk"
              >
                general settings
              </div>
            </div>
          </div>
        </div>
        <div
          class="track-horizontal"
          style="position: absolute; height: 6px; display: none;"
        >
          <div
            class="thumb-horizontal"
            style="position: relative; display: block; height: 100%;"
          />
        </div>
        <div
          class="track-vertical"
          style="position: absolute; width: 6px; display: none;"
        >
          <div
            class="thumb-vertical"
            style="position: relative; display: block; width: 100%;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
